--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.26.9",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/aws-lambda": "^8.10.147",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
