--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.26.0",
     "aws-amplify": "^6.13.0",
+    "date-fns": "^2.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
